# AndSafe3

./: .gitignore  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/net/clarenceho/andsafe/: MainActivity.kt
android/app/src/main/native/: crypto_scrypt-nosse.c  sha256.c
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/values-night/: styles.xml
android/app/src/profile/: AndroidManifest.xml
docs/: technical-design.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/routes/: router.dart  routes_handler.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb  app_zh_Hant.arb
lib/models/: note.dart  signature.dart
lib/pages/: change_password.dart  home.dart  home_drawer.dart  import.dart  note_edit.dart  note_list.dart  settings.dart  signature_setup.dart
lib/utils/: ThemeChanger.dart  andsafe_crypto.dart  category_icons.dart  helpers.dart  logger.dart  notification.dart
lib/utils/services/: auth_service.dart  biometric_service.dart  database_service.dart  note_service.dart  (+3 more)
test/: widget_test.dart
test/helpers/: mock_database_adapter.dart
test/integration/: app_flow_test.dart
test/widget/: change_password_test.dart  home_drawer_test.dart  note_edit_test.dart  note_list_test.dart  settings_test.dart  signature_setup_test.dart
(+7 files in other folders)
